Fixed Wave Clipping on Extreme Zoom

--- a/rokawoo-react-website/src/wave.css
+++ b/rokawoo-react-website/src/wave.css
@@ -3,7 +3,7 @@
 .wave {
   display: block;
   position: relative;
-  height: 40px;
+  height: 40.09px;
   width: 100%;
 }
 
